@@ -3,6 +3,7 @@
 Added ClassBytecodeWriter - used to be a single generator but cleaner if I separate.
 Class being written and executed without problem.
 Removed source paths from sources found in source path. 
+Changing Object resolution support - moved into primitive - will support name spaces this way.
 
 
 17/07/2011 Changes
